# Optical-Character-Recognition-Analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
envs/: .env.template
ocr_analysis/: config.py  main.py
ocr_analysis/api/: api.py  routes.py
ocr_analysis/cache/: cache_manager.py  redis_conf.py
ocr_analysis/tasks/: extractor.py  image_processor.py  tasks.py
ocr_analysis/templates/: index.html  result.html
ocr_analysis/utilities/: helper_validator.py
ocr_analysis/validation/: validator.py
