[tool.poetry]
name = "ocr-analysis"
version = "0.1.0"
description = "optical character recognition analysis"
authors = ["Buğra Çayır"]
readme = "README.md"
packages = [{include = "ocr_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
dynaconf = "^3.2.1"
jinja2 = "^3.1.2"
black = "^23.7.0"
bandit = "^1.7.5"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
